--- a/src/pages/Page.css
+++ b/src/pages/Page.css
@@ -1,3 +1,3 @@
     td { text-align: center; }
     table, th, td { border: 2px solid black; border-collapse: collapse; }
-    th, td { padding: 10px; }
+    th, td { padding: 10px; min-width: 20px }
